projects/nanousd-labs/nanousd/include/nanousd/nanousdapi.h

/* ============================================================
 * Opaque handles
 * ============================================================ */

typedef struct NanousdStage_s*     NanousdStage;
typedef struct NanousdPrim_s*      NanousdPrim;
typedef struct NanousdListOp_s*    NanousdListOp;
/* ============================================================
 * Stage lifecycle
 * ============================================================ */

NANOUSD_API NanousdStage   nanousd_open(const char* filepath);
NANOUSD_API void         nanousd_close(NanousdStage stage);
NANOUSD_API int          nanousd_isvalid(NanousdStage stage);
NANOUSD_API const char*  nanousd_error(NanousdStage stage);
NANOUSD_API const char*  nanousd_stage_get_root_layer_path(NanousdStage stage);
/* ============================================================
 * Prim traversal
 * ============================================================ */

NANOUSD_API int          nanousd_nprims(NanousdStage stage);
NANOUSD_API NanousdPrim    nanousd_prim(NanousdStage stage, int index);
NANOUSD_API NanousdPrim    nanousd_primpath(NanousdStage stage, const char* path);
NANOUSD_API NanousdPrim    nanousd_defaultprim(NanousdStage stage);
NANOUSD_API int          nanousd_nchildren(NanousdPrim prim);
NANOUSD_API NanousdPrim    nanousd_child(NanousdPrim prim, int index);
/* ============================================================
 * Prim queries
 * ============================================================ */

NANOUSD_API const char*  nanousd_path(NanousdPrim prim);
NANOUSD_API const char*  nanousd_name(NanousdPrim prim);
NANOUSD_API const char*  nanousd_typename(NanousdPrim prim);
NANOUSD_API const char*  nanousd_kind(NanousdPrim prim);
NANOUSD_API int          nanousd_isactive(NanousdPrim prim);
NANOUSD_API int          nanousd_isdefined(NanousdPrim prim);
NANOUSD_API int          nanousd_isabstract(NanousdPrim prim);
NANOUSD_API int          nanousd_isinstanceable(NanousdPrim prim);
/* Schema queries */
NANOUSD_API int          nanousd_isa(NanousdPrim prim, const char* typeName);
/* ============================================================
 * Attribute access
 * ============================================================ */

NANOUSD_API int          nanousd_nattribs(NanousdPrim prim);
NANOUSD_API const char*  nanousd_attribname(NanousdPrim prim, int index);
NANOUSD_API int          nanousd_hasattrib(NanousdPrim prim, const char* name);
NANOUSD_API const char*  nanousd_attribtype(NanousdPrim prim, const char* name);
/* Scalar reads */
NANOUSD_API float        nanousd_attribf(NanousdPrim prim, const char* name, int* ok);
NANOUSD_API int          nanousd_attribi(NanousdPrim prim, const char* name, int* ok);
NANOUSD_API int          nanousd_attribb(NanousdPrim prim, const char* name, int* ok);
NANOUSD_API const char*  nanousd_attribs(NanousdPrim prim, const char* name, int* ok);
/* Vector reads — returns 1 on success, 0 on failure */
NANOUSD_API int          nanousd_attribv2f(NanousdPrim prim, const char* name, float out[2]);
NANOUSD_API int          nanousd_attribv3f(NanousdPrim prim, const char* name, float out[3]);
NANOUSD_API int          nanousd_attribv4f(NanousdPrim prim, const char* name, float out[4]);
NANOUSD_API int          nanousd_attribv2d(NanousdPrim prim, const char* name, double out[2]);
NANOUSD_API int          nanousd_attribv3d(NanousdPrim prim, const char* name, double out[3]);
NANOUSD_API int          nanousd_attribv4d(NanousdPrim prim, const char* name, double out[4]);
NANOUSD_API int          nanousd_attribv2i(NanousdPrim prim, const char* name, int out[2]);
NANOUSD_API int          nanousd_attribv3i(NanousdPrim prim, const char* name, int out[3]);
NANOUSD_API int          nanousd_attribv4i(NanousdPrim prim, const char* name, int out[4]);
/* Matrix reads */
NANOUSD_API int          nanousd_attribm4d(NanousdPrim prim, const char* name, double out[16]);
/* Array attribute reads — returns number of elements written, -1 on error */
NANOUSD_API int          nanousd_attribarraylen(NanousdPrim prim, const char* name);
NANOUSD_API void         nanousd_listop_free(NanousdListOp op);
NANOUSD_API int          nanousd_listop_nitems(NanousdListOp op);
NANOUSD_API int          nanousd_listop_nprepended(NanousdListOp op);
NANOUSD_API int          nanousd_listop_nappended(NanousdListOp op);
/* Read a listop field from prim metadata (e.g. "apiSchemas", "references") */
NANOUSD_API NanousdListOp  nanousd_prim_listop(NanousdPrim prim, const char* field);
/* ============================================================
 * Attribute write operations
 *
 * All setters return 1 on success, 0 on failure.
 * Writes mutate the in-memory composed layer.
 * ============================================================ */

/* Scalar setters */
NANOUSD_API int          nanousd_set_attribf(NanousdPrim prim, const char* name, float value);
NANOUSD_API int          nanousd_set_attribd(NanousdPrim prim, const char* name, double value);
NANOUSD_API int          nanousd_set_attribi(NanousdPrim prim, const char* name, int value);
NANOUSD_API int          nanousd_set_attribs(NanousdPrim prim, const char* name, const char* value);
NANOUSD_API int          nanousd_set_attribb(NanousdPrim prim, const char* name, int value);
/* Matrix setter */
NANOUSD_API int          nanousd_set_attribm4d(NanousdPrim prim, const char* name, const double v[16]);
/* Create attribute (author new spec if not present) — returns 1 on success */
NANOUSD_API int          nanousd_create_attrib(NanousdPrim prim, const char* name,
                                            const char* typeName);
/* Vec3 array reads — output is flat float/double buffer (3 components per vec3).
 * maxcount is number of vec3 elements (not floats). Returns count written, -1 on error. */
NANOUSD_API int          nanousd_attribarrayv3f(NanousdPrim prim, const char* name,
                                             float* out, int maxcount);
/* ============================================================
 * Binary write
 * ============================================================ */

/* Serialise the in-memory stage to a USDC binary crate file.
 * Returns 1 on success, 0 on failure. */
NANOUSD_API int          nanousd_write_usdc(NanousdStage stage, const char* filepath);
/* ============================================================
 * USDA text write
 * ============================================================ */

/* Serialise the in-memory stage to a USDA text file.
 * Writes the root layer only. Returns 1 on success, 0 on failure. */
NANOUSD_API int          nanousd_write_usda(NanousdStage stage, const char* filepath);
NANOUSD_API int          nanousd_set_attrib_token(NanousdPrim prim, const char* name,
                                               const char* value);
/* Token array setter — stores as token[] type */
NANOUSD_API int          nanousd_set_attribarraytokens(NanousdPrim prim, const char* name,
                                                    const char** values, int count);
/* Token array readers — parallel to nanousd_attribarrays_len/nanousd_attribarrays
 * but for token-typed arrays. Returns -1/NULL on type mismatch. */
NANOUSD_API int          nanousd_attribarraytokens_len(NanousdPrim prim, const char* name);
NANOUSD_API const char*  nanousd_attribarraytokens(NanousdPrim prim, const char* name, int index);
/* Returns parent prim handle (caller must free with nanousd_freeprim), NULL if root */
NANOUSD_API NanousdPrim    nanousd_parent(NanousdPrim prim);
/* ============================================================
 * Handle cleanup
 * ============================================================ */

NANOUSD_API void         nanousd_freeprim(NanousdPrim prim);