projects/nanousd-labs/nanousd-opengl-renderer/python/nusd_gles/_nanousd.py

# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

"""ctypes wrapper around libnanousdapi.so — minimum surface for the read-only
StageAdapter implementation.

The C API uses opaque handles. `NanousdPrim` handles must be freed with
``nanousd_freeprim``. Stage handles are freed with ``nanousd_close``.
"""

from __future__ import annotations

import ctypes
import os
import sys
from pathlib import Path
from typing import Iterator, List, Optional

_REPO_ROOT = Path(__file__).resolve().parents[2]
_DYLIB_EXT = ".dylib" if sys.platform == "darwin" else ".so"


def _locate_lib(stem: str) -> Path:
    """Find a shared library by stem (e.g. 'libnanousdapi'), using the
    platform's native extension."""
    env = os.environ.get("NUSD_GLES_LIB_DIR")
    candidates: list[Path] = []
    libname = f"{stem}{_DYLIB_EXT}"
    if env:
        candidates.append(Path(env) / libname)
    for d in (
        _REPO_ROOT / "build" / "Release",
        _REPO_ROOT / "build",
        Path.cwd() / "build" / "Release",
        Path.cwd() / "build",
    ):
        candidates.append(d / libname)
    for c in candidates:
        if c.exists():
            return c
    raise FileNotFoundError(
        f"Could not find {libname}. Build the project first; searched: {candidates}"
    )


_lib_path = _locate_lib("libnanousdapi")
# RTLD_GLOBAL so the implementation lib (libnanousd) finds its own
# symbols once libnanousdapi dlopens it, and so any sibling libraries
# (our libnusd_gles) re-resolve to the same instance.
_core_path = _lib_path.parent / f"libnanousd{_DYLIB_EXT}"
if _core_path.exists():
    ctypes.CDLL(str(_core_path), mode=ctypes.RTLD_GLOBAL)
_lib = ctypes.CDLL(str(_lib_path), mode=ctypes.RTLD_GLOBAL)

# Stage handles
_lib.nanousd_open.restype = ctypes.c_void_p
_lib.nanousd_open.argtypes = [ctypes.c_char_p]

_lib.nanousd_close.restype = None
_lib.nanousd_close.argtypes = [ctypes.c_void_p]

_lib.nanousd_isvalid.restype = ctypes.c_int
_lib.nanousd_isvalid.argtypes = [ctypes.c_void_p]

_lib.nanousd_error.restype = ctypes.c_char_p
_lib.nanousd_error.argtypes = [ctypes.c_void_p]

_lib.nanousd_stage_get_root_layer_path.restype = ctypes.c_char_p
_lib.nanousd_stage_get_root_layer_path.argtypes = [ctypes.c_void_p]

# Prim traversal
_lib.nanousd_nprims.restype = ctypes.c_int
_lib.nanousd_nprims.argtypes = [ctypes.c_void_p]

_lib.nanousd_prim.restype = ctypes.c_void_p
_lib.nanousd_prim.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.nanousd_primpath.restype = ctypes.c_void_p
_lib.nanousd_primpath.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.nanousd_defaultprim.restype = ctypes.c_void_p
_lib.nanousd_defaultprim.argtypes = [ctypes.c_void_p]

_lib.nanousd_nchildren.restype = ctypes.c_int
_lib.nanousd_nchildren.argtypes = [ctypes.c_void_p]

_lib.nanousd_child.restype = ctypes.c_void_p
_lib.nanousd_child.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.nanousd_parent.restype = ctypes.c_void_p
_lib.nanousd_parent.argtypes = [ctypes.c_void_p]

_lib.nanousd_freeprim.restype = None
_lib.nanousd_freeprim.argtypes = [ctypes.c_void_p]

# Prim queries
_lib.nanousd_path.restype = ctypes.c_char_p
_lib.nanousd_path.argtypes = [ctypes.c_void_p]

_lib.nanousd_name.restype = ctypes.c_char_p
_lib.nanousd_name.argtypes = [ctypes.c_void_p]

_lib.nanousd_typename.restype = ctypes.c_char_p
_lib.nanousd_typename.argtypes = [ctypes.c_void_p]

_lib.nanousd_kind.restype = ctypes.c_char_p
_lib.nanousd_kind.argtypes = [ctypes.c_void_p]

_lib.nanousd_isactive.restype = ctypes.c_int
_lib.nanousd_isactive.argtypes = [ctypes.c_void_p]

_lib.nanousd_isdefined.restype = ctypes.c_int
_lib.nanousd_isdefined.argtypes = [ctypes.c_void_p]

_lib.nanousd_isabstract.restype = ctypes.c_int
_lib.nanousd_isabstract.argtypes = [ctypes.c_void_p]

_lib.nanousd_isinstanceable.restype = ctypes.c_int
_lib.nanousd_isinstanceable.argtypes = [ctypes.c_void_p]

_lib.nanousd_isa.restype = ctypes.c_int
_lib.nanousd_isa.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

# Attribute basics (used by property adapter, get_value-only)
_lib.nanousd_nattribs.restype = ctypes.c_int
_lib.nanousd_nattribs.argtypes = [ctypes.c_void_p]

_lib.nanousd_attribname.restype = ctypes.c_char_p
_lib.nanousd_attribname.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.nanousd_attribtype.restype = ctypes.c_char_p
_lib.nanousd_attribtype.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.nanousd_hasattrib.restype = ctypes.c_int
_lib.nanousd_hasattrib.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.nanousd_attribf.restype = ctypes.c_float
_lib.nanousd_attribf.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int)]

_lib.nanousd_attribi.restype = ctypes.c_int
_lib.nanousd_attribi.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int)]

_lib.nanousd_attribb.restype = ctypes.c_int
_lib.nanousd_attribb.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int)]

_lib.nanousd_attribs.restype = ctypes.c_char_p
_lib.nanousd_attribs.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int)]

_lib.nanousd_attribv2f.restype = ctypes.c_int
_lib.nanousd_attribv2f.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float * 2),
]
_lib.nanousd_attribv3f.restype = ctypes.c_int
_lib.nanousd_attribv3f.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float * 3),
]
_lib.nanousd_attribv4f.restype = ctypes.c_int
_lib.nanousd_attribv4f.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float * 4),
]
_lib.nanousd_attribv2d.restype = ctypes.c_int
_lib.nanousd_attribv2d.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_double * 2),
]
_lib.nanousd_attribv3d.restype = ctypes.c_int
_lib.nanousd_attribv3d.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_double * 3),
]
_lib.nanousd_attribv4d.restype = ctypes.c_int
_lib.nanousd_attribv4d.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_double * 4),
]
_lib.nanousd_attribv2i.restype = ctypes.c_int
_lib.nanousd_attribv2i.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int * 2),
]
_lib.nanousd_attribv3i.restype = ctypes.c_int
_lib.nanousd_attribv3i.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int * 3),
]
_lib.nanousd_attribv4i.restype = ctypes.c_int
_lib.nanousd_attribv4i.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int * 4),
]
_lib.nanousd_attribm4d.restype = ctypes.c_int
_lib.nanousd_attribm4d.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_double * 16),
]
_lib.nanousd_attribarraylen.restype = ctypes.c_int
_lib.nanousd_attribarraylen.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.nanousd_attribarrayv3f.restype = ctypes.c_int
_lib.nanousd_attribarrayv3f.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_float), ctypes.c_int,
]
_lib.nanousd_attribarraytokens_len.restype = ctypes.c_int
_lib.nanousd_attribarraytokens_len.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
_lib.nanousd_attribarraytokens.restype = ctypes.c_char_p
_lib.nanousd_attribarraytokens.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int]

# Attribute writes (used by NanousdPropertyAdapter for edits).
_lib.nanousd_set_attribf.restype = ctypes.c_int
_lib.nanousd_set_attribf.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_float]
_lib.nanousd_set_attribd.restype = ctypes.c_int
_lib.nanousd_set_attribd.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_double]
_lib.nanousd_set_attribi.restype = ctypes.c_int
_lib.nanousd_set_attribi.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int]
_lib.nanousd_set_attribb.restype = ctypes.c_int
_lib.nanousd_set_attribb.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int]
_lib.nanousd_set_attribs.restype = ctypes.c_int
_lib.nanousd_set_attribs.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]
_lib.nanousd_set_attrib_token.restype = ctypes.c_int
_lib.nanousd_set_attrib_token.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]
for _dim, _ct in ((2, ctypes.c_float), (3, ctypes.c_float), (4, ctypes.c_float),
                  (2, ctypes.c_double), (3, ctypes.c_double), (4, ctypes.c_double),
                  (2, ctypes.c_int), (3, ctypes.c_int), (4, ctypes.c_int)):
    _suf = {ctypes.c_float: "f", ctypes.c_double: "d", ctypes.c_int: "i"}[_ct]
    _fn = getattr(_lib, f"nanousd_set_attribv{_dim}{_suf}")
    _fn.restype = ctypes.c_int
    _fn.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(_ct * _dim)]
del _dim, _ct, _suf, _fn
_lib.nanousd_set_attribm4d.restype = ctypes.c_int
_lib.nanousd_set_attribm4d.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_double * 16),
]

_lib.nanousd_create_attrib.restype = ctypes.c_int
_lib.nanousd_create_attrib.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.nanousd_set_attribarraytokens.restype = ctypes.c_int
_lib.nanousd_set_attribarraytokens.argtypes = [
    ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(ctypes.c_char_p), ctypes.c_int,
]

# Stage write.
_lib.nanousd_write_usda.restype = ctypes.c_int
_lib.nanousd_write_usda.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
_lib.nanousd_write_usdc.restype = ctypes.c_int
_lib.nanousd_write_usdc.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

# ListOp introspection — used for composition badges (references,
# payloads, inherits, specializes).
_lib.nanousd_prim_listop.restype = ctypes.c_void_p
_lib.nanousd_prim_listop.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
_lib.nanousd_listop_nitems.restype = ctypes.c_int
_lib.nanousd_listop_nitems.argtypes = [ctypes.c_void_p]
_lib.nanousd_listop_nprepended.restype = ctypes.c_int
_lib.nanousd_listop_nprepended.argtypes = [ctypes.c_void_p]
_lib.nanousd_listop_nappended.restype = ctypes.c_int
_lib.nanousd_listop_nappended.argtypes = [ctypes.c_void_p]
_lib.nanousd_listop_free.restype = None
_lib.nanousd_listop_free.argtypes = [ctypes.c_void_p]


def _decode(b: Optional[bytes]) -> str:
    if b is None:
        return ""
    if isinstance(b, bytes):
        return b.decode("utf-8", errors="replace")
    return str(b)


class _Prim:
    """Owns a `NanousdPrim` handle; frees it on destruction.

    Equality / hash use the (immutable, owned-by-stage) prim path so the
    Stage Browser can keep the same item across reads and reparenting
    operations even though the underlying handle may have been freed.
    """

    __slots__ = ("_h", "_path")

    def __init__(self, handle: int, path: Optional[str] = None) -> None:
        self._h = ctypes.c_void_p(handle) if handle else None
        if path is None and self._h is not None:
            path = _decode(_lib.nanousd_path(self._h))
        self._path = path or ""

    @property
    def handle(self) -> Optional[ctypes.c_void_p]:
        return self._h

    @property
    def path(self) -> str:
        return self._path

    @property
    def name(self) -> str:
        if not self._h:
            return ""
        return _decode(_lib.nanousd_name(self._h))

    @property
    def type_name(self) -> str:
        if not self._h:
            return ""
        return _decode(_lib.nanousd_typename(self._h))

    @property
    def kind(self) -> str:
        if not self._h:
            return ""
        return _decode(_lib.nanousd_kind(self._h))

    @property
    def is_active(self) -> bool:
        return bool(self._h and _lib.nanousd_isactive(self._h))

    @property
    def is_abstract(self) -> bool:
        return bool(self._h and _lib.nanousd_isabstract(self._h))

    @property
    def is_instanceable(self) -> bool:
        return bool(self._h and _lib.nanousd_isinstanceable(self._h))

    def is_a(self, schema: str) -> bool:
        if not self._h:
            return False
        return bool(_lib.nanousd_isa(self._h, schema.encode("utf-8")))
